# depth

./: .gitignore  CMakeLists.txt  CommFunc.h  ConfidenceCompute.cpp  ConfidenceCompute.cu  ConfidenceCompute.h  CostVolCompute.cpp  CostVolCompute.cu  CostVolCompute.h  CostVolFilter.cpp  CostVolFilter.cu  CostVolFilter.h  DataDeal.cpp  DataDeal.cu  DataDeal.h  DataParameter.cpp  DataParameter.cu  DataParameter.cuh  DataParameter.h  DepthComputeToolOne.cpp  DepthComputeToolOne.h  DepthComputeToolTwo.cpp  DepthComputeToolTwo.cu  DepthComputeToolTwo.h  DisparityRefinement.cpp  DisparityRefinement.h  GlobalOptimization.cpp  GlobalOptimization.h  ImageRander.cpp  ImageRander.cu  ImageRander.h  LightFieldTool_CPU.vcxproj  LightFieldTool_CPU.vcxproj.filters  Randerconfig.txt  SceneDepthCompute.cpp  SceneDepthCompute.h  ToolOneTestDemo.cpp  ToolOneTestDemo.h  ToolTwoTestDemo.cpp  ToolTwoTestDemo.h  (+5 more)
205_66/: center_disparity_crop.txt  confidentMatMask.xml  config.txt  points.txt  points_new.txt  sceneInitDispMask.txt  timeLog.txt  white_center_crop.txt
CANLC/: NLCCA.cpp  NLCCA.h  qx_basic.h  qx_nonlocal_cost_aggregation.cpp
CAST/: STCA.cpp  STCA.h  StereoDisparity.cpp  StereoDisparity.h  StereoHelper.cpp  Toolkit.cpp
data0321_2/: 170321_white_rct_center.txt  center_disparity_crop.txt  initSceneDispMask.txt  sceneInitDispMask.txt  white_center_crop.txt
res/: test.py
res_little/: points.txt
x64/Debug/: LightFieldTool_CPU.exe.recipe  vc120.idb  vc143.idb
x64/Debug/LightFie.5DB95B25.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LightFieldTool_CPU.lastbuildstate  (+4 more)
(+4 files in other folders)
